[gd_scene load_steps=33 format=3 uid="uid://co6l5qpiqgaj5"]

[ext_resource type="Script" path="res://Scenes/GUI/AutumnCharacterSheet.gd" id="1_mq4kx"]
[ext_resource type="Texture2D" uid="uid://bfasimvh14i3l" path="res://Assets/AutumnSakilera/SpriteSheet.png" id="2_qjp81"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_77vnr"]
bg_color = Color(0.435294, 0.560784, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.729412, 0.490196, 0.0431373, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_50ptk"]
bg_color = Color(1, 1, 0.0470588, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.92549, 0.72549, 0, 1)
border_blend = true
corner_radius_top_left = 30
corner_radius_top_right = 30
corner_radius_bottom_right = 30
corner_radius_bottom_left = 30

[sub_resource type="LabelSettings" id="LabelSettings_eyoge"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_7ei00"]
font_size = 24
font_color = Color(0, 0, 0, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_00l1d"]
atlas = ExtResource("2_qjp81")
region = Rect2(0, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_sul82"]
atlas = ExtResource("2_qjp81")
region = Rect2(80, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxs5f"]
atlas = ExtResource("2_qjp81")
region = Rect2(160, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_x8prr"]
atlas = ExtResource("2_qjp81")
region = Rect2(240, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fyyh"]
atlas = ExtResource("2_qjp81")
region = Rect2(320, 0, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_4u688"]
atlas = ExtResource("2_qjp81")
region = Rect2(0, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_vokol"]
atlas = ExtResource("2_qjp81")
region = Rect2(80, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_winfi"]
atlas = ExtResource("2_qjp81")
region = Rect2(160, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_h8ker"]
atlas = ExtResource("2_qjp81")
region = Rect2(240, 80, 80, 80)

[sub_resource type="AtlasTexture" id="AtlasTexture_dgdms"]
atlas = ExtResource("2_qjp81")
region = Rect2(320, 80, 80, 80)

[sub_resource type="SpriteFrames" id="SpriteFrames_7po7n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_00l1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sul82")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fxs5f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x8prr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fyyh")
}],
"loop": true,
"name": &"IdleBackRight",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4u688")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vokol")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_winfi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h8ker")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dgdms")
}],
"loop": true,
"name": &"IdleFrontRight",
"speed": 5.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iov8m"]
bg_color = Color(0.486275, 0.596078, 1, 1)
draw_center = false
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0.862745, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="LabelSettings" id="LabelSettings_ojsha"]
font_size = 18
font_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_djxbm"]
bg_color = Color(0.576471, 0.576471, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0.8, 1)
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxrhe"]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0, 0, 0.8, 1)
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a7kge"]
bg_color = Color(0.870588, 0, 0, 0.392157)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4bwqv"]
bg_color = Color(1, 0, 0, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 10
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fwbw0"]
draw_center = false
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="LabelSettings" id="LabelSettings_gqj4a"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tb56x"]
bg_color = Color(0, 0.498039, 0.0941176, 0.392157)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6tes1"]
bg_color = Color(0, 0.498039, 0.0941176, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="LabelSettings" id="LabelSettings_3sbvb"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mxubd"]
bg_color = Color(0, 0, 1, 0.384314)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_veewp"]
bg_color = Color(0, 0, 1, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100
corner_detail = 10
shadow_size = 1

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gp6ya"]
bg_color = Color(0.6, 0, 0.6, 0.392157)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3ypnj"]
bg_color = Color(0.6, 0, 0.6, 1)
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color(0, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="Character Sheet" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mq4kx")

[node name="MainWindow" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 500)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0075
anchor_top = 0.0616667
anchor_right = 0.451
anchor_bottom = 0.99
offset_top = -6.0
offset_right = 0.199982
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_77vnr")
metadata/_edit_use_anchors_ = true

[node name="Character Name and Level Window" type="Panel" parent="MainWindow"]
custom_minimum_size = Vector2(292, 65)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0133333
anchor_top = 0.008
anchor_right = 0.986667
anchor_bottom = 0.138
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_50ptk")
metadata/_edit_use_anchors_ = true

[node name="Name and Level Label" type="Label" parent="MainWindow/Character Name and Level Window"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "Autumn Sakilera
Level 1
"
label_settings = SubResource("LabelSettings_eyoge")
horizontal_alignment = 1
vertical_alignment = 1

[node name="skillpointlabel" type="Label" parent="MainWindow/Character Name and Level Window"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -172.767
offset_top = 188.405
offset_right = 173.233
offset_bottom = 222.405
grow_horizontal = 2
grow_vertical = 2
text = "Stat Points: 500
"
label_settings = SubResource("LabelSettings_7ei00")
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="MainWindow"]
texture_filter = 1
position = Vector2(177, 129)
scale = Vector2(4, 4)
sprite_frames = SubResource("SpriteFrames_7po7n")
animation = &"IdleFrontRight"
autoplay = "IdleFrontRight"
frame_progress = 0.398674

[node name="VBoxContainer" type="VBoxContainer" parent="MainWindow"]
custom_minimum_size = Vector2(0, 300)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -301.0
offset_bottom = -1.0
grow_horizontal = 2
grow_vertical = 0

[node name="Health,Stamina,Mana" type="HBoxContainer" parent="MainWindow/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 3

[node name="Health Panel" type="Panel" parent="MainWindow/VBoxContainer/Health,Stamina,Mana"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="healthlabel" type="Label" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Health Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000818178
anchor_right = 0.994843
anchor_bottom = 0.535509
text = "Health: 
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Health Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.188034
anchor_top = 0.580031
anchor_right = 0.846154
anchor_bottom = 0.913043
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="Stamina Panel" type="Panel" parent="MainWindow/VBoxContainer/Health,Stamina,Mana"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="staminalabel" type="Label" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Stamina Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000825548
anchor_right = 0.994843
anchor_bottom = 0.542033
text = "Stamina:
 100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Stamina Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177795
anchor_top = 0.602494
anchor_right = 0.835915
anchor_bottom = 0.935504
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 10"
metadata/_edit_use_anchors_ = true

[node name="Mana Panel" type="Panel" parent="MainWindow/VBoxContainer/Health,Stamina,Mana"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="manalabel" type="Label" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Mana Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000825549
anchor_right = 0.994843
anchor_bottom = 0.542033
offset_bottom = 0.714115
text = "Mana: 
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Health,Stamina,Mana/Mana Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.181254
anchor_top = 0.602494
anchor_right = 0.839374
anchor_bottom = 0.935504
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="Damage" type="HBoxContainer" parent="MainWindow/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Physical Damage Panel" type="Panel" parent="MainWindow/VBoxContainer/Damage"]
custom_minimum_size = Vector2(50, 50)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="physicaldamagelabel" type="Label" parent="MainWindow/VBoxContainer/Damage/Physical Damage Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.00694741
anchor_top = -0.000818178
anchor_right = 1.02008
anchor_bottom = 0.549182
text = "Damage:
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Damage/Physical Damage Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.188034
anchor_top = 0.55177
anchor_right = 0.846154
anchor_bottom = 0.89
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="Magical Damage" type="Panel" parent="MainWindow/VBoxContainer/Damage"]
custom_minimum_size = Vector2(50, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="magicaldamagelabel" type="Label" parent="MainWindow/VBoxContainer/Damage/Magical Damage"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000825548
anchor_right = 0.994843
anchor_bottom = 0.542033
text = "Magic Damage:
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Damage/Magical Damage"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177795
anchor_top = 0.565103
anchor_right = 0.835915
anchor_bottom = 0.90333
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="Defense" type="HBoxContainer" parent="MainWindow/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="Physical Defense" type="Panel" parent="MainWindow/VBoxContainer/Defense"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="physicaldefenselabel" type="Label" parent="MainWindow/VBoxContainer/Defense/Physical Defense"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000818178
anchor_right = 0.994843
anchor_bottom = 0.535509
text = "Defence:
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Defense/Physical Defense"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.188034
anchor_top = 0.56177
anchor_right = 0.846154
anchor_bottom = 0.9
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="Magical Defense" type="Panel" parent="MainWindow/VBoxContainer/Defense"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_iov8m")
metadata/_edit_use_anchors_ = true

[node name="magicaldefenselabel" type="Label" parent="MainWindow/VBoxContainer/Defense/Magical Defense"]
layout_mode = 1
anchors_preset = -1
anchor_left = -0.0137042
anchor_top = -0.000825548
anchor_right = 0.994843
anchor_bottom = 0.542033
text = "Magic Defence:
100"
label_settings = SubResource("LabelSettings_ojsha")
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="MainWindow/VBoxContainer/Defense/Magical Defense"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.177795
anchor_top = 0.575103
anchor_right = 0.835915
anchor_bottom = 0.91333
theme_override_styles/normal = SubResource("StyleBoxFlat_djxbm")
text = "+ 5"
metadata/_edit_use_anchors_ = true

[node name="ScreenUI" type="Panel" parent="."]
z_index = 1
custom_minimum_size = Vector2(150, 0)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.7
anchor_top = 0.788333
anchor_right = 1.00125
anchor_bottom = 0.99167
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_mxrhe")
metadata/_edit_use_anchors_ = true

[node name="Health Bar" type="ProgressBar" parent="ScreenUI"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0746888
anchor_top = 0.0983606
anchor_right = 0.983403
anchor_bottom = 0.504707
offset_right = -19.0
offset_bottom = -29.5742
theme_override_styles/background = SubResource("StyleBoxFlat_a7kge")
theme_override_styles/fill = SubResource("StyleBoxFlat_4bwqv")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Health Label" type="Label" parent="ScreenUI/Health Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fwbw0")
text = "100/100"
label_settings = SubResource("LabelSettings_gqj4a")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Stamina Bar" type="ProgressBar" parent="ScreenUI"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0746887
anchor_top = 0.336065
anchor_right = 0.982178
anchor_bottom = 0.539894
offset_right = -18.7049
offset_bottom = -4.86707
theme_override_styles/background = SubResource("StyleBoxFlat_tb56x")
theme_override_styles/fill = SubResource("StyleBoxFlat_6tes1")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Stamina Label" type="Label" parent="ScreenUI/Stamina Bar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fwbw0")
text = "100/100"
label_settings = SubResource("LabelSettings_3sbvb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Mana Bar" type="ProgressBar" parent="ScreenUI"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0788381
anchor_top = 0.532787
anchor_right = 0.986327
anchor_bottom = 0.898149
offset_right = -18.7049
offset_bottom = -24.5742
theme_override_styles/background = SubResource("StyleBoxFlat_mxubd")
theme_override_styles/fill = SubResource("StyleBoxFlat_veewp")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[node name="Mana Label" type="Label" parent="ScreenUI/Mana Bar"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -8.5
offset_right = -18.7048
offset_bottom = 8.5
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_fwbw0")
text = "100/100"
label_settings = SubResource("LabelSettings_3sbvb")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Expbar" type="ProgressBar" parent="ScreenUI"]
custom_minimum_size = Vector2(200, 20)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.0775038
anchor_top = 0.74764
anchor_right = 0.967372
anchor_bottom = 0.818062
offset_right = -14.4581
offset_bottom = 11.4085
theme_override_styles/background = SubResource("StyleBoxFlat_gp6ya")
theme_override_styles/fill = SubResource("StyleBoxFlat_3ypnj")
value = 50.0
show_percentage = false
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="MainWindow/VBoxContainer/Health,Stamina,Mana/Health Panel/Button" to="." method="IncreaseHealth"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Health,Stamina,Mana/Stamina Panel/Button" to="." method="IncreaseStamina"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Health,Stamina,Mana/Mana Panel/Button" to="." method="IncreaseMana"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Damage/Physical Damage Panel/Button" to="." method="IncreasePhysicalDamage"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Damage/Magical Damage/Button" to="." method="IncreaseMagicalDamage"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Defense/Physical Defense/Button" to="." method="IncreasePhysicalDefense"]
[connection signal="pressed" from="MainWindow/VBoxContainer/Defense/Magical Defense/Button" to="." method="IncreaseMagicalDefense"]
